Updated project file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -50,6 +50,12 @@ spec:
     }
 
     stages {
+    stage('Checkout') {
+            steps {
+                git 'https://github.com/VaibhaviBhosale/NGO.git'
+            }
+        }
+
 
         /* -------------------------
            STATIC WEBSITE STEP
