--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: engeo-frontend-deployment
-  namespace: 2401018
+  namespace: "2401018"
 spec:
   replicas: 1
   selector:
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: engeo-connect
-          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401018_NGO/ngo:v1
+          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401018_ngo/ngo:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 80
