--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: engeo-frontend-deployment
-  namespace: 2401018
+  namespace: "2401018"
 spec:
   selector:
     app: engeo-connect
