--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,8 +26,8 @@ sonar.sourceEncoding=UTF-8
 # SonarQube Server URL
 sonar.host.url=http://sonarqube.imcc.com/
 
-# Authentication token (you requested to insert here)
-sonar.login=sqp_9bab4625da21d06e8ff026e7397361d9bfa50b7c
+# Authentication via environment variable (SAFE)
+sonar.login=${env.SONAR_TOKEN}
 
 # Optional: Coverage report
 # sonar.javascript.lcov.reportPaths=coverage/lcov.info
