--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -34,3 +34,4 @@ sonar.login=${env.SONAR_TOKEN}
 
 # File types to scan
 sonar.javascript.file.suffixes=.js,.jsx
+sonar.coverage.exclusions=public/*.js
