--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,12 +26,12 @@ sonar.sourceEncoding=UTF-8
 # SonarQube Server URL
 sonar.host.url=http://sonarqube.imcc.com/
 
-# Authentication via environment variable (SAFE)
-sonar.login=${env.SONAR_TOKEN}
+# Authentication token
+# Removed for security — Jenkinsfile will supply the token
+# sonar.login= <REMOVED>
 
 # Optional: Coverage report
 # sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # File types to scan
 sonar.javascript.file.suffixes=.js,.jsx
-sonar.coverage.exclusions=public/*.js
