--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -35,3 +35,4 @@ sonar.host.url=http://sonarqube.imcc.com/
 
 # File types to scan
 sonar.javascript.file.suffixes=.js,.jsx
+sonar.coverage.exclusions=public/login.js
