--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: engeo-frontend-deployment
+  name: engeo-frontend-service
   namespace: "2401018"
 spec:
+  type: NodePort
   selector:
     app: engeo-connect
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: LoadBalancer
+      nodePort: 31075
