--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         - name: nexus-secret
       containers:
         - name: engeo-connect
-          image: 127.0.0.1:30085/2401018_ngo/ngo:v1
+          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401018_ngo/ngo:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 80
